--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f741d981590&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5b1fc151d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f741dc7c090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f741dc7c290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5b1f8dd110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5b1f8dd310&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f741e2199d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f741e219bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f5b1fe8ba50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f5b1fe8bc50&gt;]</pre>
 </div>
 
 </div>
