--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4827ce1dd0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f721559ed10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4827fc7150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4827fc7350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7215273310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7215273510&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f48285abf10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4828576d10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7215823b90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7215823d90&gt;]</pre>
 </div>
 
 </div>
