--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd3f3d38090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff3ad4c9450&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd3f3a16210&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd3f3a16410&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff3ad1a7250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff3ad1a7450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fd3f3fc9a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fd3f3fc9c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ff3ad754b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ff3ad754d50&gt;]</pre>
 </div>
 
 </div>
