--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa9b78fd950&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2c6b274110&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa9b75aaf90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa9b75e81d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2c6af47090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2c6af47290&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fa9b7b7e8d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fa9b7b7ead0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2c6b4f39d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2c6b4f3bd0&gt;]</pre>
 </div>
 
 </div>
