--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2c6b274110&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0b0895b510&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2c6af47090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2c6af47290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0b0893d150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0b0893d350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2c6b4f39d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2c6b4f3bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0b08f24850&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0b08edac50&gt;]</pre>
 </div>
 
 </div>
