--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f5a3297fed0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f23c51181d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5a3265b050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5a3265b250&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f239bae8410&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f239bae8610&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f5a32bfd990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f5a32bfdb90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f239c096d50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f239c096f50&gt;]</pre>
 </div>
 
 </div>
