--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f23c51181d0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f9608eedd10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f239bae8410&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f239bae8610&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f960930e390&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f9609330490&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f239c096d50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f239c096f50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f96098d1bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f96098ddd10&gt;]</pre>
 </div>
 
 </div>
