--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f6615e53a50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffb9e834110&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f66161230d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f66161232d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ffb9eb1b110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ffb9eb1b310&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f66166e3990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f66166e3b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ffb9f0caa50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ffb9f0cac50&gt;]</pre>
 </div>
 
 </div>
