--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f60ac64af90&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2cc4262e10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f60ac2fa0d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f60ac3155d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2cc4562290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2cc4562490&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f60ac8b6990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f60ac8bfe90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f2cc4b06b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f2cc4b06d50&gt;]</pre>
 </div>
 
 </div>
