--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2cc4262e10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd4ec819e50&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2cc4562290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2cc4562490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd4ec4ea290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd4ec4ea490&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2cc4b06b50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2cc4b06d50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd4eca98bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd4eca98dd0&gt;]</pre>
 </div>
 
 </div>
