--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f4220559510&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fa7bdfa3450&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f4220222190&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f4220222390&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa7bdc6f310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa7bdc6f510&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f42207cfad0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f42207cfcd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fa7be25c4d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fa7be21cdd0&gt;]</pre>
 </div>
 
 </div>
