--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ff6bface790&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f29c3b13c10&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff6bfa99050&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff6bfa99250&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f29c3aa8fd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f29c3adb210&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ff6c0035990&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ff6c0035b90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f29c4078910&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f29c4078b10&gt;]</pre>
 </div>
 
 </div>
