--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7126e4dad0&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7f47317110&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7126e13090&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7126e13290&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7f4762f310&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7f4762f510&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f71273af950&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f71273afb50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7f47bcec10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7f47bcee10&gt;]</pre>
 </div>
 
 </div>
