--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f84f234a410&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f07bf7c47d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f84f202f0d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f84f202f310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f07bf7f3110&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f07bf7f3310&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f84f25cc9d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f84f25ccc10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f07bfda19d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f07bfda1bd0&gt;]</pre>
 </div>
 
 </div>
