--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f1441e07f10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f70a8ca5050&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1441af9150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1441af9350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f70a8fa7d90&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f70a8c78390&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f1442096a10&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f1442096c10&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f70a9223b50&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f70a9223d50&gt;]</pre>
 </div>
 
 </div>
