--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7e98db1b50&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fd73c0b0cd0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7e98a81390&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7e98a81590&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd73c387290&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd73c387490&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f7e99030c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f7e99030e90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fd73c93abd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fd73c93add0&gt;]</pre>
 </div>
 
 </div>
