--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7faffc793f10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f7f1ec15490&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faffca86110&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faffca86310&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7f1ef00090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7f1ef002d0&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7faffd0239d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7faffd023bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f7f1f49c990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f7f1f49cbd0&gt;]</pre>
 </div>
 
 </div>
