--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc20fbd6f10&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f91b487b510&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc20f8ba290&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc20f8ba490&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f91b4b57250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f91b4b57450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7fc20fe6bb50&gt;,
- &lt;matplotlib.lines.Line2D at 0x7fc20fe6bd50&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f91b5104bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f91b5104dd0&gt;]</pre>
 </div>
 
 </div>
