--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f992eade790&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffb8d2c6110&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f992e78d3d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f992e7b8510&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ffb8d86d250&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ffb8d86d450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f992ed51c90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f992ed5bdd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7ffb8de21bd0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7ffb8de21dd0&gt;]</pre>
 </div>
 
 </div>
