--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7ffb8d2c6110&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fc092c2b790&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffb8d86d250&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffb8d86d450&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc092f1b150&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc092f1b350&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7ffb8de21bd0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7ffb8de21dd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fc0934be990&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fc0934beb90&gt;]</pre>
 </div>
 
 </div>
