--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f76af412090&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7fdb89f0a550&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f76af0d70d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f76af0d72d0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdb8a1fb090&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdb8a1fb290&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f76af6c28d0&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f76af685bd0&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7fdb8a7979d0&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7fdb8a797bd0&gt;]</pre>
 </div>
 
 </div>
