--- a/GTCOVID.html
+++ b/GTCOVID.html
@@ -13563,7 +13563,7 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f2e29745550&gt;</pre>
+<pre>&lt;matplotlib.axes._subplots.AxesSubplot at 0x7f0bf7ff50d0&gt;</pre>
 </div>
 
 </div>
@@ -13666,8 +13666,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2e29707150&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2e29707350&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0bf7cf8e10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0bf7cca450&gt;]</pre>
 </div>
 
 </div>
@@ -13716,8 +13716,8 @@ div#notebook {
 
 
 <div class="output_text output_subarea output_execute_result">
-<pre>[&lt;matplotlib.lines.Line2D at 0x7f2e29cb9a90&gt;,
- &lt;matplotlib.lines.Line2D at 0x7f2e29cb9c90&gt;]</pre>
+<pre>[&lt;matplotlib.lines.Line2D at 0x7f0bf8277b10&gt;,
+ &lt;matplotlib.lines.Line2D at 0x7f0bf8277d10&gt;]</pre>
 </div>
 
 </div>
